# portcullis-rust

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE-APACHE  LICENSE-MIT  README.md  buf.gen.yaml  buf.yaml  index.html  portcullis-edge-engine-TDD.md
.claude/agents/: portcullis-reviewer.md  proto-contract-guard.md  security-auditor.md
.claude/skills/accounting-metering/: SKILL.md
.claude/skills/embedded-perf/: SKILL.md
.claude/skills/netns-harness/: SKILL.md
.claude/skills/nft-ruleset/: SKILL.md
.claude/skills/openwrt-build/: SKILL.md
.github/workflows/: ci.yml  release-ipk.yml
arm_cortex-a7_neon-vfpv4/: Packages  portcullis_0.18.1-1_arm_cortex-a7_neon-vfpv4.ipk  portcullis_0.4.0-1_arm_cortex-a7_neon-vfpv4.ipk
crates/portcullis-accounting/: Cargo.toml
crates/portcullis-accounting/src/: conntrack.rs  deauth.rs  lib.rs  metering.rs  mock.rs  reaper.rs  shaper.rs
crates/portcullis-accounting/tests/: tc_netns.rs
crates/portcullis-config/: Cargo.toml
crates/portcullis-config/src/: lib.rs
crates/portcullis-control/: Cargo.toml  build.rs
crates/portcullis-control/src/: channel.rs  convert.rs  event_log.rs  lib.rs  service.rs  transport.rs
crates/portcullis-engined/: Cargo.toml
crates/portcullis-engined/src/: compose.rs  main.rs  metrics.rs  runtime.rs
crates/portcullis-engined/tests/: netns.rs
crates/portcullis-garden/: Cargo.toml
crates/portcullis-garden/src/: lib.rs
crates/portcullis-nft/: Cargo.toml
crates/portcullis-nft/src/: backend.rs  device_meter.rs  ipset_iptables.rs  lib.rs  nftables_json.rs  ruleset.rs  writer.rs
crates/portcullis-provision/: Cargo.toml
crates/portcullis-provision/src/: device_obs.rs  handle.rs  lib.rs  liveness.rs  runner.rs  sm.rs  uci.rs
crates/portcullis-redirect/: Cargo.toml
crates/portcullis-redirect/src/: lib.rs  location.rs  ratelimit.rs  resolver.rs  sign.rs
crates/portcullis-session/: Cargo.toml
crates/portcullis-session/src/: lib.rs
crates/portcullis-types/: Cargo.toml
crates/portcullis-types/src/: lib.rs
deploy/: .gitignore  Makefile  PACKAGING.md  README.md  ZTP-DEPLOYMENT-PLAN.md  ZTP-GOLDEN-IMAGE.md  build-golden-image.sh  build-ipk.sh  portcullis-enroll.init  portcullis.init  preflight.sh  teardown.sh
deploy/capabilities/: portcullis.json
deploy/ci/: pack-ipk.sh
deploy/config/: bootstrap.conf  portcullis
deploy/k8s/: README.md  build-images.sh  configmap.yaml  deploy.sh  deployment.yaml  gen-dev-mtls.sh  kustomization.yaml  namespace.yaml  rollback.sh  service.yaml  setup-cluster.sh
deploy/uci-defaults/: 99-portcullis  99-portcullis-enroll
docs/adr/: 0001-hexagonal-ports-and-adapters.md  0002-no-radius-cp-is-nas-of-record.md  0003-cgnat-engine-dials-the-control-plane.md  0004-kernel-as-truth-adopt-never-flush.md  0005-single-nft-writer-actor.md  0006-no-flash-writes-ram-tmpfs-only.md  0007-fail-closed-everywhere.md  0008-firewallbackend-trait-nft-and-ipset.md  0009-mac-session-key-hmac-signed-redirect.md  0010-dual-path-expiry.md  0011-conntrack-subset-of-auth-reaping.md  0012-runtime-control-state-and-engine-control-port.md  0013-bandwidth-shaping-tc-htb.md  0014-backend-aware-walled-garden.md  0015-single-threaded-tokio-runtime.md  0016-proto-contract-buf-committed-bindings.md  0017-upx-packing-flash-budget.md  README.md
docs/design/: cgnat-bidi-control-channel.md  confirm-on-reconnect.md  conntrack-reaping-on-deauth.md  control-plane-edge-architecture.md  cp-managed-wireless-fleet.md  cp-owned-config-boundary.md  engine-tracing.md  hotspot-service-plan.md
mips_24kc/: Packages  portcullis_0.18.1-1_mips_24kc.ipk  portcullis_0.4.0-1_mips_24kc.ipk
mipsel_24kc/: Packages  portcullis_0.18.1-1_mipsel_24kc.ipk  portcullis_0.4.0-1_mipsel_24kc.ipk
proto/: enforcement.proto
