[package]
name = "portcullis-control"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Engine control-plane edge: dials the control plane over an mTLS bidirectional gRPC stream (CGNAT-safe), bridges proto <-> domain, and fans events (TDD §7.5, §13)."

[dependencies]
portcullis-types.workspace = true
async-trait.workspace = true
tokio.workspace = true
tonic = { workspace = true, features = ["tls"] }
prost.workspace = true
prost-types.workspace = true
futures.workspace = true
tracing.workspace = true
thiserror.workspace = true

[build-dependencies]
tonic-build.workspace = true
# Bundled protoc so the build needs no system `protoc` (CI, cross containers,
# and contributor machines all work out of the box). Used only as a fallback
# when a system protoc is not on PATH.
protoc-bin-vendored = "3"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros", "rt"] }
