[package]
name = "portcullis-control"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Engine control-plane edge: dials the control plane over an mTLS bidirectional gRPC stream (CGNAT-safe), bridges proto <-> domain, and fans events (TDD §7.5, §13)."

[dependencies]
portcullis-types.workspace = true
async-trait.workspace = true
tokio.workspace = true
tonic = { workspace = true, features = ["tls"] }
prost.workspace = true
prost-types.workspace = true
futures.workspace = true
tracing.workspace = true
thiserror.workspace = true

# No [build-dependencies]: proto codegen moved to Buf (buf.gen.yaml, committed
# under src/gen), so there is no build.rs and no build-time protoc/tonic-build.

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros", "rt"] }
