[package]
name = "portcullis-engined"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "The daemon binary: composition root, Tokio runtime, signal handling, graceful shutdown, restart adoption (TDD §6, §7.8)."

[[bin]]
name = "portcullis"
path = "src/main.rs"

[dependencies]
portcullis-types.workspace = true
portcullis-config.workspace = true
portcullis-nft.workspace = true
portcullis-session.workspace = true
portcullis-redirect.workspace = true
portcullis-garden.workspace = true
portcullis-accounting.workspace = true
portcullis-provision.workspace = true
portcullis-control.workspace = true
tonic = { workspace = true, features = ["tls"] }
axum.workspace = true
tokio = { workspace = true }
async-trait.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true

# Build-only workaround, not used directly. Under `-Z build-std` (the tier-3
# mipsel/mips cross-build), cargo's feature resolver drops the `default`/`std`
# feature that `tower 0.4.13` (via tonic transport) relies on from indexmap
# 1.9.3, which erases the `S` default type param and makes tower's
# `IndexMap<K, V>` fail to compile ("3 generic args expected"). Pinning the same
# indexmap version here with `std` on re-activates it through feature
# unification. Harmless on host builds. Remove if tonic/tower move to indexmap 2.
indexmap-1 = { package = "indexmap", version = "=1.9.3", features = ["std"] }
