[package]
name = "portcullis-provision"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Isolated hotspot-network provisioning subsystem (P0.5): renders a FIXED allowlist of UCI sections + commit-confirm state machine with a local watchdog. Fail-OPEN, never touches the inet wifihub enforcement table."

[dependencies]
portcullis-types.workspace = true
# P3 device telemetry: the pure nft named-counter renderers/parsers
# (`device_meter`) that build the per-device-IP `nft -j` metering docs and parse
# `nft -j list counters`. These are pure JSON helpers — no netfilter linkage of
# their own — reused so the counter naming/parsing contract lives in ONE place
# (the crate that owns the `inet wifihub` table).
portcullis-nft.workspace = true
async-trait.workspace = true
tokio.workspace = true
tracing.workspace = true
thiserror.workspace = true
# Parse `ubus call network.wireless status` for the post-reload liveness check
# (D2). Already linked into the engine binary via other crates, so no new
# footprint on the MIPS target.
serde_json.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros", "rt"] }
tempfile = "3"
